# twiez-macro

./: LICENSE  README.md  README.tr.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  engine.rs  hotkey.rs  input.rs  main.rs  settings.rs
