[package]
name = "twiez-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
discord-rich-presence = "1.0.0"
open = "5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
